<resources>
    <string name="app_name">Learning English</string>
    <string name="start_button">Start</string>
    <string name="edit_text_name"><font size="24">Name</font></string>
    <string name="edit_text_last_name"><font size="24">Last Name</font></string>
    <string name="choose_level">Choose your level</string>
    <string name="level_1">Beginner</string>
    <string name="level_2">intermediate</string>
    <string name="level_3">Advanced</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>